<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Triggerexample</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="number">Phone</string>
    <string name="submit">Submit</string>
    <string name="fetch">Fetch</string>
    <string name="update">Update</string>
</resources>
