<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:padding="15dp"
    >
    <TextView 
        android:id="@+id/tv_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/id"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/Black"
        />
    <EditText 
        android:id="@+id/et_id"
        android:layout_toRightOf="@+id/tv_id"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:ems="10"
        android:layout_marginTop="-5dp"
        android:layout_marginLeft="35dp"
        />
    <TextView 
        android:id="@+id/tv_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/Black"
        android:layout_below="@id/et_id"
        />
      <EditText 
        android:id="@+id/et_name"
        android:layout_toRightOf="@+id/tv_name"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:ems="10"
        android:layout_below="@+id/et_id"
        android:layout_marginTop="-5dp"
        android:layout_marginLeft="5dp"
        />
       <TextView 
        android:id="@+id/tv_number"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/number"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/Black"
        android:layout_below="@id/tv_name"
        />
      <EditText 
        android:id="@+id/et_number"
        android:layout_toRightOf="@+id/tv_name"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:ems="10"
        android:layout_below="@+id/et_name"
        android:layout_marginTop="-5dp"
        android:layout_marginLeft="5dp"
        />
      <Button 
          android:id="@+id/btn_submit"
          android:layout_height="wrap_content"
          android:layout_width="70dp"
          android:layout_below="@+id/et_number"
          android:layout_marginTop="10dp"
          android:text="@string/submit"
          android:background="@color/appColor"
          android:gravity="center"
          android:layout_marginLeft="20dp"
          />
         <Button 
          android:id="@+id/btn_fetch"
          android:layout_height="wrap_content"
          android:layout_width="70dp"
          android:layout_below="@+id/et_number"
          android:layout_toRightOf="@+id/btn_submit"
          android:layout_marginTop="10dp"
          android:text="@string/fetch"
          android:background="@color/appColor"
          android:gravity="center"
          android:layout_marginLeft="10dp"
          /> 
          <Button 
          android:id="@+id/btn_update"
          android:layout_height="wrap_content"
          android:layout_width="70dp"
          android:layout_below="@+id/et_number"
          android:layout_toRightOf="@+id/btn_fetch"
          android:layout_marginTop="10dp"
          android:text="@string/update"
          android:background="@color/appColor"
          android:gravity="center"
          android:layout_marginLeft="10dp"
          />
</RelativeLayout>